merge: network package (SimpleChannel base + 2.0.4 card-mode/locator/wireless-host semantics)